--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ header .fas {
 .promotion {
     padding: 4rem;
     margin: 2rem auto;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/banner-bg.jpg) no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/banner-bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
